<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Skittle\'s Q&amp;A</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_my_questions">MyQuestionsActivity</string>
    <string name="title_activity_main_screen">MainScreenActivity</string>
    <string name="title_activity_ask_screen">AskScreenActivity</string>
    <string name="ask">ASK</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="browse">BROWSE</string>
    <string name="setLocation">Set \n Location</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="logo">This is our logo</string>
    <string name="title_activity_read_later">ReadLaterActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_browse">BrowseActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_question">QuestionActivity</string>
    <string name="add_answer">Add an Answer</string>
    <string name="answers_indicator">Answers:</string>
    <string name="add_reply">Add a Reply</string>
    <string name="reply_indicator">Replies:</string>
    <string name="view_picture">View Picture</string>
    <string name="title_activity_answer_replies">AnswerRepliesActivity</string>
    <string name="answer_indicator">Answer:</string>
    <string name="title_activity_favourite">FavouriteActivity</string>
    <string name="title_activity_answer_reply">AnswerReplyActivity</string>
    <string name="goto_answers">See Answers</string>
    <string-array name="options">
        <item>GPS</item>
        <item>Set Myself</item>
        <item>Unset</item>
    </string-array>
    <string name="savefave">Save as a Favourite</string>
    <string name="savereadlater">Save to Read Later</string>
</resources>
