<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.ualberta.cs.f14t07_application.AnswerRepliesActivity" >

    <TextView
        android:id="@+id/ReplyAnswerIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/answer_indicator"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/ReplyAnswerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ReplyAnswerIndicator"
        android:layout_below="@+id/ReplyAnswerIndicator"
        android:paddingLeft="30dp"
        android:text="Answer Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/ReplyList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/AddReply"
        android:layout_below="@+id/ReplyListIndicator"
        android:paddingLeft="30dp" >

    </ListView>

    <Button
        android:id="@+id/AddReply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ReplyList"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/ReplyList"
        android:text="@string/add_reply" />

    <TextView
        android:id="@+id/ReplyListIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ReplyAnswerText"
        android:layout_below="@+id/ReplyAnswerText"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/reply_indicator"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
