<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.ualberta.cs.views.QuestionActivity" >  

    
    <RelativeLayout 
   		android:id="@+id/QuestionSubjectArea"
    	android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_weight="0" >
        
		<Button
   	    	android:id="@+id/QuestionSaveButton"
       		android:layout_width="wrap_content"
       		android:layout_height="wrap_content"
       		android:layout_alignParentRight="true"
       		android:layout_alignParentTop="true"
       		android:text="@string/save" />

   		<TextView
       		android:id="@+id/QuestionSubject"
       		android:layout_width="wrap_content"
       		android:layout_height="wrap_content"
       		android:layout_alignParentLeft="true"
       		android:layout_alignParentTop="true"
       		android:layout_toLeftOf="@+id/QuestionSaveButton"
       		android:text="Question Subject"
       		android:textAppearance="?android:attr/textAppearanceLarge" />
   	
   	</RelativeLayout>
    
    
    <RelativeLayout 
   		android:id="@+id/QuestionArea"
    	android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_weight="1" >
   		
        <Button
        	android:id="@+id/QuestionUpvoteButton"
        	style="?android:attr/buttonStyleSmall"
        	android:layout_width="25dp"
        	android:layout_height="35dp"
        	android:layout_alignParentTop="true"
        	android:layout_alignParentLeft="true"
        	android:adjustViewBounds="true"
        	android:background="@drawable/upvote_arrow" />
	      
    	<Button
        	android:id="@+id/QuestionNovoteButton"
			style="?android:attr/buttonStyleSmall"
        	android:layout_width="25dp"
        	android:layout_height="35dp"
        	android:layout_alignParentTop="true"
        	android:layout_alignParentLeft="true"
        	android:adjustViewBounds="true"
        	android:background="@drawable/novote_arrow"
       		android:visibility="invisible" />
	      
    	<TextView 
        	android:id="@+id/QuestionUpvoteNumber"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_below="@+id/QuestionUpvoteButton"
			android:layout_alignParentLeft="true"
			android:paddingLeft="7dp"
        	android:text="0"
        	android:textAppearance="?android:attr/textAppearanceSmall" />  
   		
    	<ScrollView 
   			android:id="@+id/QuestionScroller"
    		android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_toRightOf="@+id/QuestionUpvoteButton"
	    	android:layout_alignTop="@+id/QuestionUpvoteButton"
        	android:paddingLeft="10dp" >
        
        	<LinearLayout
        	    android:id="@+id/QuestionLayout"
        	    android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:orientation="vertical" >
    
	  			<TextView
        			android:id="@+id/QuestionText"
    	    		android:layout_width="wrap_content"
	        		android:layout_height="wrap_content"
        			android:text="Question Text"
        			android:textAppearance="?android:attr/textAppearanceMedium"
        			android:scrollbars = "vertical" />
	  		
	  			<Button
   	   				android:id="@+id/QuestionViewPicture"
   	   				style="?android:attr/buttonStyleSmall"
       				android:layout_width="wrap_content"
       				android:layout_height="wrap_content"
       				android:minHeight="7dp"
       				android:text="@string/view_picture" />
    	
	    		<TextView 
        			android:id="@+id/QuestionAuthor"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:textColor="#888888"
        			android:text="Question Author"
        			android:textAppearance="?android:attr/textAppearanceSmall" />
	     
    			<TextView 
        			android:id="@+id/QuestionDate"
        			android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:textColor="#888888"
        			android:text="Question Date"
        			android:textAppearance="?android:attr/textAppearanceSmall" />
	    
    		</LinearLayout>	
    	</ScrollView>    	
    </RelativeLayout>
	    
	<ListView
        android:id="@+id/QuestionReplyList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingLeft="10dp" >
	</ListView>
	
	<Button 
        android:id="@+id/QuestionReplyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="7dp"
        android:layout_weight="0"
        android:text="@string/add_reply" />  
        
	<Button 
        android:id="@+id/QuestionGoToAnswerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="7dp"
        android:layout_weight="0"
        android:text="@string/goto_answers" /> 

</LinearLayout>